<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.hadirahimi.locationFinder.ui.activity.main.MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/iran_yekan_medium"
        android:gravity="center"
        android:text="@string/my_car_locations"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
android:src="@drawable/header"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tvMyLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/iran_yekan_medium"
        android:text="@string/my_locations"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_header" />

    <Button
        android:id="@+id/btnSaveParkLoc"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/btn_red"
        android:fontFamily="@font/iran_yekan_medium"
        android:paddingHorizontal="20dp"
        android:text="@string/save_new_location"
        android:textColor="@color/white"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="@+id/tvMyLoc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvMyLoc" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyLocation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMyLoc"
        tools:listitem="@layout/item_location" />

    <FrameLayout
        android:id="@+id/emptyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMyLoc">
        <include layout="@layout/empty"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>