<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10mdp"
                android:fontFamily="@font/iran_yekan_medium"
                android:gravity="center"
                android:text="@string/delete_location"
                android:textColor="@color/black"
                android:textSize="@dimen/_15font_mdp"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10mdp"
                android:layout_marginTop="@dimen/_10mdp"
                android:fontFamily="@font/iran_yekan_medium"
                android:gravity="right"
                android:text="@string/delete_description"
                android:textColor="@color/black"
                android:textSize="@dimen/_10font_mdp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginVertical="@dimen/_10mdp"
                android:layout_marginLeft="@dimen/_5mdp"
                android:layout_marginRight="@dimen/_10mdp"
                android:background="@drawable/btn_red"
                android:fontFamily="@font/iran_yekan_medium"
                android:paddingHorizontal="@dimen/_30mdp"
                android:text="@string/delete_location"
                android:textSize="@dimen/_10font_mdp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/btnCancel"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescription" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginVertical="@dimen/_10mdp"
                android:layout_marginLeft="@dimen/_10mdp"
                android:layout_marginRight="@dimen/_5mdp"
                android:background="@drawable/btn_red_border"
                android:fontFamily="@font/iran_yekan_medium"
                android:textSize="@dimen/_10font_mdp"
                android:paddingHorizontal="@dimen/_30mdp"
                android:text="@string/cancel"
                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btnDelete"
                app:layout_constraintTop_toBottomOf="@id/tvDescription" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>